[package]
name = "system-uptime"
version = "0.1.2"
edition = "2024"
authors = ["Sergey Reshetnikov <shaman@simmirra.com>"]
license = "MIT"
repository = "https://github.com/greyshaman/system-uptime"
homepage = "https://github.com/greyshaman/system-uptime"
readme = "README.md"
keywords = ["uptime","ticks"]
description = """
A cross-platform Rust library for retrieving operating system uptime.
"""

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["sysinfoapi", "errhandlingapi"] }

[target.'cfg(any(unix, target_os = "windows"))'.dependencies]
libc = "0.2"
